<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rhcloud.com.testapp.fragment.BlankCloseableFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_blank_fragment" />

    <Button
        android:text="Close Tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCloseTab"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
