<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/droidutils_ic_empty"
        android:id="@+id/icon" />

    <TextView
        android:text="icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/text1"
        android:gravity="center"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:background="@android:color/transparent"
        android:src="@drawable/droidutils_ic_clear_black_24dp"
        android:id="@+id/ibClose" />

</LinearLayout>